# BetterCpp

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/01_simple/: 01_simple.cpp  CMakeLists.txt
examples/02_fibonacci/: 02_fibonacci.cpp  CMakeLists.txt
examples/03_objects/: 03_objects.cpp  CMakeLists.txt
examples/04_arrays/: 04_arrays.cpp  CMakeLists.txt
include/betterc++/: betterc++.hpp
include/betterc++/detail/: object.hpp  variable.hpp
